test/visibility/except/exceptWrongSymbol.good
exceptWrongSymbol.chpl:8: error: Bad identifier in 'except' clause, no known 'q' defined in 'M1'
